<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:onClick="viewProgress"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/server_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="24dp"
        android:text="Server status: "
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/server_status2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toEndOf="@+id/server_status"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/refresh"
        android:layout_width="107dp"
        android:layout_height="39dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        android:text="@string/refresh"
        app:layout_constraintBaseline_toBaselineOf="@+id/server_status"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeColor="#FFFFFF" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="294dp"
        android:layout_height="296dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/server_status"
        app:srcCompat="@drawable/home_logo" />

    <Button
        android:id="@+id/button4"
        android:layout_width="194dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:onClick="addGoals"
        android:text="@string/add_goals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button2"
        android:layout_width="194dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:onClick="viewGoals"
        android:text="@string/view_goals"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button3"
        android:layout_width="194dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:onClick="viewProgress"
        android:text="@string/view_events"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button10"
        android:layout_width="194dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:onClick="viewProgress"
        android:text="@string/view_progress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button11"
        android:layout_width="194dp"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:onClick="settings"
        android:text="@string/settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button10" />

</androidx.constraintlayout.widget.ConstraintLayout>